[package]
name = "app_base"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
log.workspace = true
uuid = { version = "1.17.0", features = ["v4", "v7", "v8", "v5"] }
winit = "0.30.11"
base_derive.workspace = true
tokio.workspace = true
dotenvy.workspace = true
nalgebra.workspace = true